# Hybirid-Agentic-RAG

./: README.md  pyproject.toml  requirements.txt
src/: agent.py  ingestion.py  notebook.ipynb  prompt.py  vector_store.py
